--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an article</h1>
+<h1>Edit existing article</h1>
 
 <% if @article.errors.any? %>
 <h2>The following errors prevented the article from being created:</h2>
@@ -10,19 +10,19 @@
 <% end %>
 
 <%= form_for @article do |f| %>
-  <p>
-    <%= f.label :title %> <br>
-    <%= f.text_field :title %>
-  </p>
-  
-  <p>
-    <%= f.label :description %><br/>
-    <%= f.text_area :description %>
-  </p>
+<p>
+  <%= f.label :title %><br/>
+  <%= f.text_field :title %>
+</p>
+ 
+<p>
+  <%= f.label :description %><br/>
+  <%= f.text_area :description %><br/> 
+</p>
 
-  <p>
-    <%= f.submit %>
-  </p>
+<p>
+  <%= f.submit %>
+</p>
 
 <% end %>
 
