Add user data to article listing page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,6 +21,10 @@ $navbar-default-bg: #08088A;
   text-align: center;
 }
 
+.article-meta-details {
+  margin-top: 15px;
+}
+
 .article-actions {
   padding-top: 5px;
 }
